Issue #3355036 by Harish1688, galactus86, sahal_va: Theme issue with Local Task menu item alignment in admin toolbar

--- a/styles/components/toolbar_secondary.scss
+++ b/styles/components/toolbar_secondary.scss
@@ -353,6 +353,7 @@
 
       .toolbar-menu {
         background-color: transparent;
+        float: unset;
       }
     }
   }
